--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,17 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# Default ignored files
+/.idea
+.idea/shelf/
+.idea/workspace.xml
+# Editor-based HTTP Client requests
+.idea/httpRequests/
+# Datasource local storage ignored files
+.idea/dataSources/
+.idea/dataSources.local.xml
+# Zeppelin ignored files
+.idea/ZeppelinRemoteNotebooks/
+# CodeStream ignored files
+/../../Weather-App\.idea/codestream.xml
