--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "asdfasdf",
+  "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,7 +28,6 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.5"
   },
