--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
