--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.20.6"
+    "zod": "^3.20.6",
+    "@trpc/client": "^10.35.0",
+    "@trpc/next": "^10.35.0",
+    "@trpc/server": "^10.35.0",
+    "superjson": "^1.13.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
