--- a/package.json
+++ b/package.json
@@ -11,14 +11,9 @@
   },
   "dependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
-    "next": "^13.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.20.6",
     "@trpc/client": "^10.35.0",
     "@trpc/next": "^10.35.0",
     "@trpc/server": "^10.35.0",
-    "superjson": "^1.13.1",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
@@ -27,13 +22,19 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^1.4.0",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "next": "^13.4.1",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "superjson": "^1.13.1",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zod": "^3.20.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
