--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
