--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
