--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "^10.4.7",
     "axios": "^1.4.0",
     "eslint": "^8.40.0",
