--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@trpc/server": "^10.35.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.14.0",
-    "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -34,6 +33,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "superjson": "^1.13.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
