--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
     "axios": "^1.4.0",
     "eslint": "^8.40.0",
