--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.4",
     "superjson": "^1.13.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
