--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "next": "^13.4.1",
