--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "next": "^13.4.1",
+    "next-axiom": "1.0.0-rc.1",
     "postcss": "^8.4.14",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
