--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "lucide-react": "^0.274.0",
     "next": "^13.4.1",
     "next-axiom": "1.0.0-rc.1",
     "postcss": "^8.4.14",
@@ -40,7 +43,9 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.4",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.6",
     "zod": "^3.21.4"
   },
