--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "lucide-react": "^0.274.0",
