--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@types/eslint": "^8.37.0",
+    "@types/leaflet": "^1.9.4",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -32,6 +33,8 @@
     "dayjs": "^1.11.9",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.274.0",
     "next": "^13.4.1",
     "next-axiom": "1.0.0-rc.1",
@@ -41,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.4",
     "superjson": "^1.13.1",
