--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@legendapp/state": "^1.8.1",
+    "@next/bundle-analyzer": "^13.4.19",
     "@total-typescript/ts-reset": "^0.4.2",
     "@trpc/client": "^10.37.1",
     "@trpc/next": "^10.37.1",
