--- a/package.json
+++ b/package.json
@@ -10,50 +10,50 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@legendapp/state": "^1.8.1",
-    "@next/bundle-analyzer": "^13.4.19",
-    "@total-typescript/ts-reset": "^0.4.2",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/server": "^10.37.1",
-    "@types/eslint": "^8.37.0",
-    "@types/leaflet": "^1.9.4",
-    "@types/node": "^18.15.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@upstash/ratelimit": "^0.4.3",
+    "@legendapp/state": "^1.11.1",
+    "@next/bundle-analyzer": "^13.5.2",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@trpc/client": "^10.38.4",
+    "@trpc/next": "^10.38.4",
+    "@trpc/server": "^10.38.4",
+    "@types/eslint": "^8.44.2",
+    "@types/leaflet": "^1.9.5",
+    "@types/node": "^20.6.3",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "@upstash/ratelimit": "^0.4.4",
     "@upstash/redis": "^1.22.0",
-    "@vercel/analytics": "^1.0.1",
-    "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
+    "@vercel/analytics": "^1.0.2",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.9",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.2",
+    "dayjs": "^1.11.10",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "lucide-react": "^0.274.0",
-    "next": "^13.4.1",
-    "next-axiom": "1.0.0-rc.1",
-    "postcss": "^8.4.21",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.2.5",
+    "lucide-react": "^0.279.0",
+    "next": "^13.5.2",
+    "next-axiom": "^1.0.0",
+    "postcss": "^8.4.30",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.6",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.1.6",
-    "zod": "^3.21.4"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
