--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.279.0",
     "next": "^13.5.3",
     "next-axiom": "^1.0.0",
+    "next-i18next": "^14.0.3",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
