--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/react-html-parser": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@upstash/ratelimit": "^0.4.4",
@@ -47,6 +48,7 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
