--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@
 OPEN_WEATHER_API_KEY="..."
 UPSTASH_REDIS_REST_URL="https://..."
 UPSTASH_REDIS_REST_TOKEN="..."
+UPSTASH_RATELIMITER_TOKENS_PER_TIME="..."
+UPSTASH_RATELIMITER_TIME_INTERVAL="..."
