--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/bundle-analyzer": "^13.5.4",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@trpc/client": "^10.38.5",
     "@trpc/next": "^10.38.5",
