Added the full email-sent functionality

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ UPSTASH_REDIS_REST_URL="https://..."
 UPSTASH_REDIS_REST_TOKEN="..."
 UPSTASH_RATELIMITER_TOKENS_PER_TIME="..."
 UPSTASH_RATELIMITER_TIME_INTERVAL="..."
+RESEND_API_KEY="re_..."
