--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@legendapp/state": "^1.11.3",
     "@next/bundle-analyzer": "^13.5.4",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "^0.0.7",
+    "@react-email/html": "^0.0.4",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@trpc/client": "^10.38.5",
@@ -49,10 +52,12 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
+    "resend": "^1.1.0",
     "sharp": "^0.32.6",
     "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
