--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@legendapp/state": "^2.1.2",
     "@next/bundle-analyzer": "^14.0.0",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.11",
     "@react-email/html": "^0.0.6",
