--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^9.7.2",
     "@hookform/resolvers": "^3.3.2",
     "@legendapp/state": "^2.1.3",
     "@next/bundle-analyzer": "^14.0.3",
