--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512x-512-any.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any maskable"
