--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.22.1",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
