--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ yarn-error.log*
 /../../Weather-App\.idea/codestream.xml
 /.fleet
 
+# PWA files
 /public/sw.js
 /public/sw.js.map
 /public/workbox-*.js
