refactor(backend): Allowed misspellings and enhanced the performance by using fuse.js.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dayjs": "^1.11.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
+    "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
