--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "resend": "^2.0.0",
     "sharp": "^0.33.1",
