feat: Added a PWA Lifecycle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["@ducanh2912/next-pwa/workbox"],
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
