--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "^14.0.4",
     "next-axiom": "^1.1.1",
     "next-i18next": "^15.1.1",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
@@ -62,9 +63,9 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3",
     "resend": "^2.0.0",
     "sharp": "^0.33.1",
+    "sonner": "^1.3.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
