--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "dev:test": "playwright test",
+    "dev:test:ui": "playwright test --ui",
+    "e2e:test": "start-server-and-test \"(pnpm start)\" http://localhost:3000 \"pnpm exec playwright test\""
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.0",
@@ -66,6 +69,7 @@
     "resend": "^2.0.0",
     "sharp": "^0.33.1",
     "sonner": "^1.3.1",
+    "start-server-and-test": "^2.0.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
@@ -75,5 +79,8 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.40.1"
   }
 }
