refactor: Added QWeather Key to the .env.example file

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ UPSTASH_REDIS_REST_TOKEN="..."
 UPSTASH_RATELIMITER_TOKENS_PER_TIME="..."
 UPSTASH_RATELIMITER_TIME_INTERVAL="..."
 RESEND_API_KEY="re_..."
+QWEATHER_API_KEY="..."
