refactor: Improved the UX of the "choose my location" feature

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ UPSTASH_RATELIMITER_TOKENS_PER_TIME="..."
 UPSTASH_RATELIMITER_TIME_INTERVAL="..."
 RESEND_API_KEY="re_..."
 QWEATHER_API_KEY="..."
+API_NINJA_API_KEY="..."
