--- a/src/lib/city-data/package.json
+++ b/src/lib/city-data/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run:everything": "node download.mjs && node convert.mjs && node renamejsonproperties.mjs"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,9 @@
   "dependencies": {
     "jsonfile": "^6.1.0",
     "yauzl": "^2.10.0"
+  },
+  "devDependencies": {
+    "@types/jsonfile": "^6.1.4",
+    "@types/yauzl": "^2.10.3"
   }
 }
