--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,6 @@ coverage
 out/
 next-env.d.ts
 
-# nitro
-.nitro/
-.output/
-
-# expo
-.expo/
-dist/
-expo-env.d.ts
-apps/expo/.gitignore
-
 # production
 build
 
@@ -45,6 +35,21 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# Default ignored files
+/.idea
+.idea/shelf/
+.idea/workspace.xml
+# Editor-based HTTP Client requests
+.idea/httpRequests/
+# Datasource local storage ignored files
+.idea/dataSources/
+.idea/dataSources.local.xml
+# Zeppelin ignored files
+.idea/ZeppelinRemoteNotebooks/
+# CodeStream ignored files
+/../../Weather-App\.idea/codestream.xml
+/.fleet
 
 # turbo
 .turbo
