deps: Added some missing dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+# PWA files
+/apps/web/public/sw.js
+/apps/web/public/sw.js.map
+/apps/web/public/workbox-*.js
+/apps/web/public/workbox-*.js.map
+/apps/web/public/fallback-*.js
