--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,18 +19,19 @@
     "@legendapp/state": "^2.1.4",
     "@next/bundle-analyzer": "^14.0.4",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
-    "@tanstack/react-query-next-experimental": "5.8.7",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "@weatherio/api": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
     "@weatherio/ui": "workspace:^0.1.0",
     "classnames": "^2.5.1",
     "next": "^14.0.4",
+    "next-axiom": "^1.1.1",
     "next-i18next": "^15.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
