--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
     "@legendapp/state": "^2.1.4",
     "@next/bundle-analyzer": "^14.0.4",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query-devtools": "^5.8.7",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
