--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "leaflet": "^1.9.4",
@@ -35,11 +36,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@weatherio/eslint-config": "workspace:^0.2.0",
     "@weatherio/prettier-config": "workspace:^0.1.0",
     "@weatherio/tailwind-config": "workspace:^0.1.0",
     "@weatherio/tsconfig": "workspace:^0.1.0",
-    "@types/leaflet": "^1.9.8",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
