chore: Updated ESLint file and made some pages ESLint compliant

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ yarn-error.log*
 /apps/web/public/workbox-*.js
 /apps/web/public/workbox-*.js.map
 /apps/web/public/fallback-*.js
+
+# Playwright
+test-results
+playwright-report
+blob-report
+playwright/.cache
