--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.1",
     "sonner": "^1.3.1",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
