--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "@weatherio/types": "workspace:^0.1.0",
     "@weatherio/ui": "workspace:^0.1.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "next": "^14.0.4",
     "next-axiom": "^1.1.1",
     "next-i18next": "^15.1.2",
