--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,7 @@
     "@weatherio/city-data": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
     "axios": "^1.6.4",
+    "dayjs": "^1.11.10",
     "fuse.js": "^7.0.0",
     "next-axiom": "^1.1.1",
     "resend": "^2.1.0",
