--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next-themes": "^0.2.1",
+    "react": "18.2.0",
     "react-leaflet": "^4.2.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
