--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -19,5 +19,10 @@
       "@weatherio/eslint-config/base"
     ]
   },
-  "prettier": "@weatherio/prettier-config"
+  "prettier": "@weatherio/prettier-config",
+  "devDependencies": {
+    "@weatherio/tsconfig": "workspace:^0.1.0",
+    "@weatherio/eslint-config": "workspace:^0.2.0",
+    "@weatherio/prettier-config": "workspace:^0.1.0"
+  }
 }
