--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@trpc/client": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "@upstash/ratelimit": "^1.0.0",
