--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/leaflet": "^1.9.8",
     "@weatherio/eslint-config": "workspace:^0.2.0",
