--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["src",  "../../reset.d.ts"],
+  "include": ["src",  "../../reset.d.ts", "*.mjs"],
   "exclude": ["node_modules"]
 }
