chore: Added typescript to all packages where it wasn't

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -21,8 +21,11 @@
   },
   "prettier": "@weatherio/prettier-config",
   "devDependencies": {
-    "@weatherio/tsconfig": "workspace:^0.1.0",
     "@weatherio/eslint-config": "workspace:^0.2.0",
-    "@weatherio/prettier-config": "workspace:^0.1.0"
+    "@weatherio/prettier-config": "workspace:^0.1.0",
+    "@weatherio/tsconfig": "workspace:^0.1.0"
+  },
+  "dependencies": {
+    "typescript": "^5.3.3"
   }
 }
