--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -25,14 +25,15 @@
   "prettier": "@weatherio/prettier-config",
   "dependencies": {
     "jsonfile": "^6.1.0",
+    "typescript": "^5.3.3",
     "yauzl": "^2.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jsonfile": "^6.1.4",
     "@types/yauzl": "^2.10.3",
-    "@weatherio/tsconfig": "workspace:^0.1.0",
     "@weatherio/eslint-config": "workspace:^0.2.0",
-    "@weatherio/prettier-config": "workspace:^0.1.0"
+    "@weatherio/prettier-config": "workspace:^0.1.0",
+    "@weatherio/tsconfig": "workspace:^0.1.0"
   }
 }
