chore: Added eslint and prettier to all packages where it wasn't

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -23,9 +23,9 @@
   "devDependencies": {
     "@weatherio/eslint-config": "workspace:^0.2.0",
     "@weatherio/prettier-config": "workspace:^0.1.0",
-    "@weatherio/tsconfig": "workspace:^0.1.0"
-  },
-  "dependencies": {
+    "@weatherio/tsconfig": "workspace:^0.1.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   }
 }
