--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -25,7 +25,6 @@
   "prettier": "@weatherio/prettier-config",
   "dependencies": {
     "jsonfile": "^6.1.0",
-    "typescript": "^5.3.3",
     "yauzl": "^2.10.0",
     "zod": "^3.22.4"
   },
@@ -34,6 +33,9 @@
     "@types/yauzl": "^2.10.3",
     "@weatherio/eslint-config": "workspace:^0.2.0",
     "@weatherio/prettier-config": "workspace:^0.1.0",
-    "@weatherio/tsconfig": "workspace:^0.1.0"
+    "@weatherio/tsconfig": "workspace:^0.1.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
   }
 }
