feat: Changed the subject if the form was created via a test

--- a/turbo.json
+++ b/turbo.json
@@ -55,6 +55,7 @@
     "UPSTASH_RATELIMITER_TIME_INTERVAL",
     "RESEND_API_KEY",
     "QWEATHER_API_KEY",
-    "API_NINJA_API_KEY"
+    "API_NINJA_API_KEY",
+    "TEST_MODE"
   ]
 }
