fix: Fixed a bug which caused a major outage of the APIs

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./env": "./env.mjs"
   },
   "license": "MIT",
   "scripts": {
