chore: Enhanced the env.example file with some nice examples

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,9 @@
 OPEN_WEATHER_API_KEY="..."
 UPSTASH_REDIS_REST_URL="https://..."
 UPSTASH_REDIS_REST_TOKEN="..."
-UPSTASH_RATELIMITER_TOKENS_PER_TIME="..."
-UPSTASH_RATELIMITER_TIME_INTERVAL="..."
+UPSTASH_RATELIMITER_TOKENS_PER_TIME="..." // e.g. 30
+UPSTASH_RATELIMITER_TIME_INTERVAL="..." // e.g. 1s, 1m, 1h, 1d
+UPSTASH_RATELIMITER_EXCLUDED_IPS="..." // List of IPs separated by comma
 RESEND_API_KEY="re_..."
 QWEATHER_API_KEY="..."
 API_NINJA_API_KEY="..."
