--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,12 +3,27 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": [
+        "./src/*"
+      ]
     },
-    "plugins": [{ "name": "next" }],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
-    "types": ["@ducanh2912/next-pwa/workbox"]
+    "types": [
+      "@ducanh2912/next-pwa/workbox"
+    ],
+    "strictNullChecks": true
   },
-  "include": [".", ".next/types/**/*.ts", "../../reset.d.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    ".",
+    ".next/types/**/*.ts",
+    "../../reset.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
