--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,7 @@
     "@upstash/redis": "^1.28.1",
     "@weatherio/city-data": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
-    "axios": "^1.6.5",
+    "big-integer": "^1.6.52",
     "dayjs": "^1.11.10",
     "fuse.js": "^7.0.0",
     "next-axiom": "^1.1.1",
