--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
     "start": "pnpm with-env next start",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --"
+    "with-env": "dotenv -e ../../.env --",
+    "postinstall": "basehub"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
@@ -29,6 +30,7 @@
     "@weatherio/api": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
     "@weatherio/ui": "workspace:^0.1.0",
+    "basehub": "^1.3.10",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
