refactor: Moved the search logic to convex

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,9 +27,11 @@
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.9",
     "@weatherio/api": "workspace:^0.1.0",
+    "@weatherio/city-data": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
     "@weatherio/ui": "workspace:^0.1.0",
     "classnames": "^2.5.1",
+    "convex": "^1.8.0",
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "next-axiom": "^1.1.1",
