--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,4 @@ UPSTASH_RATELIMITER_EXCLUDED_IPS="..." // List of IPs separated by comma
 RESEND_API_KEY="re_..."
 QWEATHER_API_KEY="..."
 API_NINJA_API_KEY="..."
+NEXT_PUBLIC_CONVEX_URL="https://..."
