fix: Fixed an error and allowed the passing of deploy keys

--- a/turbo.json
+++ b/turbo.json
@@ -58,6 +58,7 @@
     "QWEATHER_API_KEY",
     "API_NINJA_API_KEY",
     "TEST_MODE",
-    "NEXT_PUBLIC_CONVEX_URL"
+    "NEXT_PUBLIC_CONVEX_URL",
+    "CONVEX_DEPLOY_KEY"
   ]
 }
