--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "update:city-data": "cd src && node download.mjs && node convert.mjs && node renamejsonproperties.mjs && node createJSONL.mjs",
-    "push:city-data": " convex import --table search src/city-list.jsonl --replace"
+    "push:city-data": " convex import --table search src/city-list.jsonl --replace",
+    "build": "convex deploy"
   },
   "eslintConfig": {
     "root": true,
