--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "update:city-data": "cd src && node download.mjs && node convert.mjs && node renamejsonproperties.mjs && node createJSONL.mjs",
-    "convex:deploy": " convex import --table search src/city-list.jsonl --replace && convex deploy"
+    "convex:deploy": " convex import --table search src/city-list.jsonl --replace --prod && convex deploy"
   },
   "eslintConfig": {
     "root": true,
