--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo typecheck",
+    "update:city-data": "cd packages/city-data && pnpm update:city-data && pnpm push:city-data",
     "convex:deploy": "cd packages/city-data && pnpm update:city-data && pnpm convex:deploy",
     "e2e:test": "turbo e2e:test"
   },
