Fix: Fixed the broken turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -58,7 +58,7 @@
     "QWEATHER_API_KEY",
     "API_NINJA_API_KEY",
     "TEST_MODE",
-    "BASEHUB_TOKEN"
+    "BASEHUB_TOKEN",
     "NEXT_PUBLIC_CONVEX_URL",
     "CONVEX_DEPLOY_KEY"
   ],
