--- a/.github/workflows/update-convex.yml
+++ b/.github/workflows/update-convex.yml
@@ -11,6 +11,7 @@ env:
   FORCE_COLOR: 3
   TURBO_TEAM: ${{ vars.TURBO_TEAM }}
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  BASEHUB_TOKEN: ${{ secrets.BASEHUB_TOKEN }}
 
 jobs:
     update-city-data:
