refactor: Switched to the basic setup inside the playwright GH action

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,17 +22,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-    - name: Install dependencies
-      run: npm install -g pnpm && pnpm install
+
+    - name: Setup
+      uses: ./tooling/github/setup
+
     - name: Install Playwright Browsers
       run: pnpm exec playwright install --with-deps
+
     - name: Build
       run: pnpm build
+
     - name: Test
       run: pnpm e2e:test
+
     - uses: actions/upload-artifact@v4
       if: always()
       with:
