chore: Made it easier to debug the lighthouse GH Action

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,6 +23,7 @@ jobs:
               previewUrl = matches[0];
               console.log('Preview url found:', previewUrl);
             }
+            console.log(comment);
             console.log("No preview url found.");
             core.setOutput('vercel_preview_url', previewUrl);
 
