--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@trpc/client": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "^11.0.0-next-beta.318",
+    "@trpc/server": "^11.0.0-next-beta.318",
     "@upstash/ratelimit": "^1.0.1",
     "@upstash/redis": "^1.28.4",
     "@weatherio/types": "workspace:^0.1.0",
