--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "~/*": [
         "./src/*"
+      ],
+      "@weatherio/api": [
+        "node_modules/@weatherio/api/*"
       ]
     },
     "plugins": [
