--- a/turbo.json
+++ b/turbo.json
@@ -58,10 +58,7 @@
     "QWEATHER_API_KEY",
     "API_NINJA_API_KEY",
     "TEST_MODE",
-    "NEXT_PUBLIC_CONVEX_URL",
-    "CONVEX_DEPLOY_KEY"
-  ],
-  "globalPassThroughEnv": [
-    "CONVEX_URL"
+    "TURSO_CONNECTION_URL",
+    "TURSO_AUTH_TOKEN"
   ]
 }
