--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typecheck": "turbo typecheck",
     "update:city-data-prod": "cd packages/city-data && pnpm update:city-data && pnpm push:city-data-prod",
     "update:city-data-dev": "cd packages/city-data && pnpm update:city-data && pnpm push:city-data-dev",
-    "convex:deploy": "cd packages/city-data && pnpm convex:deploy",
+    "db:push": "pnpm -F db push",
     "e2e:test": "turbo e2e:test"
   },
   "devDependencies": {
