--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -4,21 +4,19 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./index.ts",
     "./admin1": "./src/admin1.json",
     "./admin2": "./src/admin2.json"
   },
   "license": "MIT",
   "scripts": {
-    "dev": "convex dev",
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
-    "update:city-data": "cd src && node download.mjs && node convert.mjs && node renamejsonproperties.mjs && node createJSONL.mjs",
-    "push:city-data-prod": "convex import --table search src/city-list.jsonl --replace --prod",
-    "push:city-data-dev": "convex import --table search src/city-list.jsonl --replace",
-    "convex:deploy": "convex deploy"
+    "update:city-data": "cd src && tsx download.ts && tsx convert.ts",
+    "push:city-data-prod": "pnpm with-env tsx src/push-city-data.ts",
+    "push:city-data-dev": "",
+    "with-env": "dotenv -e ../../.env --"
   },
   "eslintConfig": {
     "root": true,
@@ -28,9 +26,9 @@
   },
   "prettier": "@weatherio/prettier-config",
   "dependencies": {
-    "convex": "^1.10.0",
+    "@weatherio/db": "workspace:^",
+    "dotenv-cli": "^7.4.1",
     "jsonfile": "^6.1.0",
-    "jsonl": "^1.1.2",
     "yauzl": "^3.1.2",
     "zod": "^3.22.4"
   },
