--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,47 +1,44 @@
 {
-  "name": "@weatherio/api",
-  "version": "0.1.0",
+  "name": "@weatherio/db",
   "private": true,
+  "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./env": "./env.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./src/index.ts"
+    }
   },
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@trpc/client": "^11.0.0-next-beta.318",
-    "@trpc/server": "^11.0.0-next-beta.318",
-    "@upstash/ratelimit": "^1.0.1",
-    "@upstash/redis": "^1.28.4",
-    "@weatherio/db": "workspace:^",
-    "@weatherio/types": "workspace:^0.1.0",
-    "dayjs": "^1.11.10",
-    "next-axiom": "^1.1.1",
-    "resend": "^3.2.0",
-    "superjson": "2.2.1",
-    "zod": "^3.22.4"
+    "push": "pnpm with-env drizzle-kit push:sqlite --config src/config.ts",
+    "typecheck": "tsc --noEmit",
+    "with-env": "dotenv -e ../../.env --"
   },
   "devDependencies": {
     "@weatherio/eslint-config": "workspace:^0.2.0",
     "@weatherio/prettier-config": "workspace:^0.1.0",
     "@weatherio/tsconfig": "workspace:^0.1.0",
+    "dotenv-cli": "^7.4.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
       "@weatherio/eslint-config/base",
       "@weatherio/eslint-config/drizzle"
     ]
   },
-  "prettier": "@weatherio/prettier-config"
+  "prettier": "@weatherio/prettier-config",
+  "dependencies": {
+    "@libsql/client": "^0.6.0",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "drizzle-orm": "^0.30.7",
+    "zod": "^3.22.4"
+  }
 }
