--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,6 +8,9 @@
       ],
       "@weatherio/api": [
         "node_modules/@weatherio/api/*"
+      ],
+      "@weatherio/db": [
+        "node_modules/@weatherio/db/*"
       ]
     },
     "plugins": [
