--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
-    }
+    },
+    "./env": "./env.ts"
   },
   "license": "MIT",
   "scripts": {
