refactor: Moved back to convex

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # secrets in it. If you are cloning this repo, create a copy of this file named
 # ".env" and populate it with your secrets.
 
-# When adding additional environment variables, the schema in "/src/env.ts"
+# When adding additional environment variables, the schema in the env.ts file in the correct package and eventually the env config in the turbo.json file should be changed accordingly.
 # should be updated accordingly.
 
 OPEN_WEATHER_API_KEY="..."
@@ -18,5 +18,4 @@ UPSTASH_RATELIMITER_EXCLUDED_IPS="..." // List of IPs separated by comma
 RESEND_API_KEY="re_..."
 QWEATHER_API_KEY="..."
 API_NINJA_API_KEY="..."
-TURSO_CONNECTION_URL="libsql://..."
-TURSO_AUTH_TOKEN="..."
+NEXT_PUBLIC_CONVEX_URL="https://..." // The Convex Dev / Prod (if you want to test against prod) public convex URL
