--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,8 +14,7 @@ env:
   RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
   QWEATHER_API_KEY: ${{ secrets.QWEATHER_API_KEY }}
   API_NINJA_API_KEY: ${{ secrets.API_NINJA_API_KEY }}
-  TURSO_CONNECTION_URL: ${{ secrets.TURSO_CONNECTION_URL }}
-  TURSO_AUTH_TOKEN: ${{ secrets.TURSO_AUTH_TOKEN }}
+  NEXT_PUBLIC_CONVEX_URL: ${{ secrets.NEXT_PUBLIC_CONVEX_URL_PROD }}
 
 jobs:
   test:
