--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,10 +27,11 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "@weatherio/api": "workspace:^0.1.0",
-    "@weatherio/db": "workspace:^",
+    "@weatherio/city-data": "workspace:^0.1.0",
     "@weatherio/types": "workspace:^0.1.0",
     "@weatherio/ui": "workspace:^0.1.0",
     "clsx": "^2.1.0",
+    "convex": "^1.11.0",
     "dayjs": "^1.11.10",
     "jiti": "^1.21.0",
     "next": "^14.1.3",
