--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo typecheck",
-    "update:city-data-prod": "cd packages/city-data && pnpm update:city-data && pnpm push:city-data-prod",
-    "update:city-data-dev": "cd packages/city-data && pnpm update:city-data && pnpm push:city-data-dev",
-    "db:push": "pnpm -F db push",
+    "update:city-data-prod": "cd packages/city-data && pnpm update:city-data-prod",
+    "update:city-data-dev": "cd packages/city-data && pnpm update:city-data-dev",
+    "convex:deploy": "cd packages/city-data && pnpm convex:deploy",
     "e2e:test": "turbo e2e:test"
   },
   "devDependencies": {
