--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -6,8 +6,7 @@
   "files": [
     "./base.js",
     "./nextjs.js",
-    "./react.js",
-    "./drizzle.js"
+    "./react.js"
   ],
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
@@ -21,7 +20,6 @@
     "@typescript-eslint/parser": "^7.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^1.12.5",
-    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
