fix: Fixed some errors when setting up new convex db

--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "jsonfile": "^6.1.0",
     "jsonl-db": "^1.0.1",
+    "tsx": "^4.7.2",
     "yauzl": "^3.1.2",
     "zod": "^3.22.4"
   },
