--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,10 +20,10 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.28.6",
-    "@trpc/client": "^11.0.0-next-beta.318",
-    "@trpc/next": "^11.0.0-next-beta.318",
-    "@trpc/react-query": "^11.0.0-next-beta.318",
-    "@trpc/server": "^11.0.0-next-beta.318",
+    "@trpc/client": "^11.0.0-rc.403",
+    "@trpc/next": "^11.0.0-rc.403",
+    "@trpc/react-query": "^11.0.0-rc.403",
+    "@trpc/server": "^11.0.0-rc.403",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "@weatherio/api": "workspace:^0.1.0",
