--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@trpc/client": "^11.0.0-next-beta.318",
-    "@trpc/server": "^11.0.0-next-beta.318",
+    "@trpc/client": "^11.0.0-rc.403",
+    "@trpc/server": "^11.0.0-rc.403",
     "@upstash/ratelimit": "^1.0.1",
     "@upstash/redis": "^1.28.4",
     "@weatherio/types": "workspace:^0.1.0",
     "dayjs": "^1.11.10",
+    "next": "^14.1.3",
     "next-axiom": "^1.3.0",
     "resend": "^3.2.0",
     "superjson": "2.2.1",
