--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,5 +49,11 @@ jobs:
       - name: Setup
         uses: ./tooling/github/setup
 
+      - name: Add city data
+        run: pnpm update:city-data-dev
+        env:
+          CONVEX_URL: ${{ secrets.CONVEX_URL }}
+          CONVEX_DEPLOY_KEY: ${{ secrets.CONVEX_DEPLOY_KEY }}
+
       - name: Typecheck
         run: pnpm typecheck
