--- a/packages/city-data/package.json
+++ b/packages/city-data/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "update:city-data-dev": "cd src && cross-env DEV_MODE=true tsx download.ts && cross-env DEV_MODE=true tsx convert.ts && cross-env DEV_MODE=true tsx optimize-json.ts && cd .. && convex import --table search src/cities.jsonl --replace",
+    "update:city-data-ci": "cd src && cross-env DEV_MODE=true tsx download.ts && cross-env DEV_MODE=true tsx convert.ts && cross-env DEV_MODE=true tsx optimize-json.ts",
     "update:city-data-prod": "cd src && tsx download.ts && tsx convert.ts && tsx optimize-json.ts && cd .. && convex import --table search src/cities.jsonl --replace --prod",
     "convex:deploy": "convex deploy"
   },
